# sentinel2-ingest

./: .env.example  .gitignore  PLAN.md  PROJECT_CONTEXT.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: ownership-task.md
.github/workflows/: ci.yml
docs/: bands-and-resolution.md  ownership-workflow.md  project-plan.md  quality-decisions.md
src/sentinel2_ingest/: __init__.py  bands.py  client.py  config.py  exceptions.py
src/sentinel2_ingest/aoi/: __init__.py  validation.py
src/sentinel2_ingest/inspection/: __init__.py  quality.py  ranking.py  selection.py
src/sentinel2_ingest/models/: __init__.py  inputs.py  quality.py  results.py  scenes.py
src/sentinel2_ingest/providers/: __init__.py  base.py  fake.py  sentinel_hub.py
tests/: test_aoi_validation.py  test_bands.py  test_candidate_ranking.py  test_candidate_selection.py  test_client_inspection.py  test_config.py  test_exceptions.py  test_models.py  test_package_import.py  test_quality.py  test_sentinel_hub_provider.py
